manifests/arrstack/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arrstack
  namespace: jovian-prod
  labels:
    app: arrstack
    service: media-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: arrstack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: arrstack
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: bazarr
        image: ghcr.io/hotio/bazarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6767
          name: bazarr-http
          protocol: TCP   
        volumeMounts:
        - name: bazarr-config
          mountPath: /config
        - name: nfs-media
          mountPath: /nfs-media
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
      - name: prowlarr
        image: ghcr.io/hotio/prowlarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9696
          name: prowlarr-http
          protocol: TCP   
        volumeMounts:
        - name: prowlarr-config
          mountPath: /config
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
      - name: radarr
        image: ghcr.io/hotio/radarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7878
          name: radarr-http
          protocol: TCP   
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: nfs-media
          mountPath: /nfs-media
        resources:
          requests:
            memory: "400Mi"
            cpu: "100m"
          limits:
            memory: "600Mi"
            cpu: "1000m"
      - name: sonarr
        image: ghcr.io/hotio/sonarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
          name: sonarr-http
          protocol: TCP   
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: nfs-media
          mountPath: /nfs-media
        resources:
          requests:
            memory: "700Mi"
            cpu: "100m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8191
          name: flare-tcp
          protocol: TCP   
      - name: cleanuparr
        image: ghcr.io/cleanuparr/cleanuparr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 11011
          name: cleanuparr-tcp
          protocol: TCP   
        volumeMounts:
        - name: cleanuparr-config
          mountPath: /config
        resources:
          requests:
            memory: "450Mi"
            cpu: "100m"
          limits:
            memory: "600Mi"
            cpu: "1000m"
      volumes:
      - name: bazarr-config
        persistentVolumeClaim:
          claimName: bazarr-pvc
          readOnly: false
      - name: prowlarr-config
        persistentVolumeClaim:
          claimName: prowlarr-pvc
          readOnly: false
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-pvc
          readOnly: false
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-pvc
          readOnly: false
      - name: cleanuparr-config
        persistentVolumeClaim:
          claimName: cleanuparr-pvc
          readOnly: false
      - name: nfs-media
        persistentVolumeClaim:
          claimName: arrstack-smb-media-pvc
          readOnly: false
