manifests/arrstack/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arrstack-ingress
  namespace: jovian-prod
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: bazarr.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  arrstack-service
                port:
                  number: 6767
    - host: prowlarr.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  arrstack-service
                port:
                  number: 9696
    - host: radarr.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  arrstack-service
                port:
                  number: 7878
    - host: sonarr.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  arrstack-service
                port:
                  number: 8989
    - host: cleanuparr.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  arrstack-service
                port:
                  number: 11011
